# 3DSE

./: .gitignore  README.md  build_engine.bat  requirements.txt
engine/: CMakeLists.txt
engine/include/: Engine.hpp  GameObject.hpp  Module.hpp  engine_common.hpp  entity.hpp
engine/include/modules/: RenderModule.hpp  TestModule.hpp  logger_module.hpp  module.hpp  test_module.hpp  transform_module.hpp
engine/src/: GameObject.cpp  Module.cpp  engine.cpp  entity.cpp  main.cpp  python_binds.cpp
engine/src/modules/: RenderModule.cpp  TestModule.cpp  logger_module.cpp  module.cpp  test_module.cpp  transform_module.cpp
game/: main.py
scripts/: build_engine.py
